# action-s3-artifact

./: .gitignore  README.md  action.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
s3_artifact/: action.py
tests/: test_action.py
