[project]
name = "s3-artifact"
version = "0.1.0"
authors = [
    { name = "moneymeets GmbH", email = "service@moneymeets.com" },
]
readme = "README.md"
requires-python = "~=3.14.0"

[project.scripts]
merge_checks_runner = "s3_artifact.action:main"

[tool.poetry.dependencies]
dataclasses-json = "*"
pyyaml = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"

pytest = "*"
pytest-cov = "*"

[tool.coverage.run]
branch = true
source = ["."]
omit = ["**/tests/*.py"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
